--- a/src/_includes/hero.html
+++ b/src/_includes/hero.html
@@ -26,7 +26,7 @@
                         <div class="col-md-10">
                             <div class="lv-hero-item-caption text-center">
                                 <h1 class="display-1">Your Local Construction Experts</h1>
-                                <p class="h4 mb-0">Serving Campbelltown and Western Sydney</p>
+                                <p class="h4 mb-0">Serving Campbelltown and Greater Western Sydney</p>
                             </div>
                         </div>
                     </div>
