--- a/src/assets/_scss/app/base/_global.scss
+++ b/src/assets/_scss/app/base/_global.scss
@@ -38,3 +38,23 @@
 //=========================================
 //
 //=========================================
+
+//-----------------------------------------------------------------
+// MIMICK FLEX - USED IN HOMEPAGE HERO
+//-----------------------------------------------------------------
+
+// .table-row {
+//     @include media-breakpoint-up(md) {
+//         display: table;
+//         width: 100%;
+//         margin: 0;
+//     }
+
+//     [class*='col-'] {
+//         @include media-breakpoint-up(md) {
+//             display: table-cell;
+//             float: none;
+//             padding: 0;
+//         }
+//     }
+// }
