--- a/src/assets/_scss/app/components/_all.scss
+++ b/src/assets/_scss/app/components/_all.scss
@@ -1,6 +1,7 @@
 /* generated with grunt-sass-globbing */
 
 @import "forms";
+@import "google-map";
 @import "hero";
 @import "lists";
 @import "loader";
