--- a/src/assets/_scss/app/components/_forms.scss
+++ b/src/assets/_scss/app/components/_forms.scss
@@ -42,8 +42,13 @@ form[data-toggle="validator"] .has-error > .error {
 }
 
 //-----------------------------------------------------------------
-//
+// ASTERISK
 //-----------------------------------------------------------------
+
+.asterisk {
+	color: #499cf9;
+}
+
 //=========================================
 //
 //=========================================
