--- a/src/assets/_scss/app/components/_social_media.scss
+++ b/src/assets/_scss/app/components/_social_media.scss
@@ -63,7 +63,7 @@
 	.facebook    { background: #3b5998; }
 	.github      { background: #9f7be1; }
 	.google-plus { background: #dd4b39; }
-	.instagram   { background: #0077b5; }
+	.instagram   { background: #c62e6f; } //#0077b5; }
 	.linked-in   { background: #405de6; }
 	.pinterest   { background: #bd081c; }
 	.twitter     { background: #1da1f2; }
