--- a/src/assets/_scss/app/layout/_footer.scss
+++ b/src/assets/_scss/app/layout/_footer.scss
@@ -10,6 +10,27 @@
 //-----------------------------------------------------------------
 // FOOTER
 //-----------------------------------------------------------------
+
+.global-footer-body {
+	padding: $spacer*2 0;
+	background: #222;
+	color: white;
+
+	[class*='block-grid-'] {
+		margin: rem-calc(-0);
+
+		li {
+			padding: rem-calc(0);
+			margin-bottom: 0;
+			padding-bottom: 0;
+		}
+	}
+
+	li, p {
+		font-size: rem-calc(14);
+	}
+}
+
 //-----------------------------------------------------------------
 // FOOTER BOTTOM
 //-----------------------------------------------------------------
