--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,17 +1,62 @@
 {% assign settings = site.data.settings %}
+{% assign suburbs = settings.campbelltown_suburbs %}
+{% assign sitemap = site.data.sitemap %}
+
+<!-- FOOTER BODY -->
+<section class="global-footer-body">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-9">
+
+				<div class="row">
+					<div class="col-md-3">
+						<h4>Quick Links</h4>
+						<ul class="list-unstyled">
+							{% for item in sitemap %}
+								<li><a href="{{ item.url }}">{{ item.title }}</a></li>
+							{% endfor %}
+						</ul>
+					</div>
+					<div class="col-md-9">
+						<h4>Areas We Service</h4>
+						<ul class="block-grid-xs-2 block-grid-sm-3 block-grid-md-3 block-grid-lg-4">
+							{% for item in suburbs %}
+								<li>{{ item.title }}</li>
+							{% endfor %}
+						</ul>
+						<div class="spacer mb-4 mb-md-0"></div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+
+				<h4>Trading Hours</h4>
+				<p>
+					<strong>MON - FRI:</strong> 7:30am - 5pm<br>
+					<strong>SAT:</strong> 9am - 4pm<br>
+					<strong>SUN:</strong> 10am - 4pm<br>
+				</p>
+
+				<div class="spacer mb-1"></div>
+
+				<h4>Connect With Us</h4>
+				{% include snippets/social_media.html %}
+			</div>
+		</div>
+	</div>
+</section>
 
 <!-- FOOTER BOTTOM -->
 <section class="global-footer-bottom">
     <div class="container">
 		<div class="row">
-			<div class="col-6">
+			<div class="col-md-6">
 				<small>
-					&copy; {{ site.time | date: '%Y' }}&nbsp;&nbsp;&nbsp;
-					| New website coming soon
+					&copy; {{ site.time | date: '%Y' }} &nbsp;|&nbsp; CJH Constructions PTY LTD
 					<!-- <a data-toggle="collapse" href="#sitemap">Site Map&nbsp;<i class="fa fa-angle-down"></i></a> -->
 				</small>
 			</div>
-			<div class="col-6 text-right">
+			<div class="col-md-6 text-right">
 			{% comment %}
 
 
@@ -28,6 +73,7 @@
     </div>
 </section>
 
+{% comment %}
 <!-- FOOTER SITEMAP -->
 <section id="sitemap" class="global-footer-sitemap collapse">
 	<div class="container">
@@ -45,3 +91,4 @@
 		</ul>
 	</div>
 </section>
+{% endcomment %}
