--- a/src/_includes/snippets/form_basic.html
+++ b/src/_includes/snippets/form_basic.html
@@ -18,34 +18,58 @@
 
         <!-- NAME -->
         <div class="form-group">
-            <label for="name">Your Name (required)</label>
-            <input class="form-control" id="name" name="Name" type="text" placeholder="Name" required>
+            <label for="name">Your Name<span class="asterisk">*</span></label>
+            <input class="form-control" id="name" name="Name" type="text" placeholder="" required>
             <small class="error">Your name is required.</small>
         </div>
 
         <!-- EMAIL -->
         <div class="form-group">
-            <label for="email">Your Email (required)</label>
-            <input class="form-control" id="email" name="Email" type="email" placeholder="Email" required>
+            <label for="email">Your Email<span class="asterisk">*</span></label>
+            <input class="form-control" id="email" name="Email" type="email" placeholder="" required>
             <small class="error">A valid email is required.</small>
         </div>
 
         <!-- PHONE -->
         <div class="form-group">
             <label for="email">Phone</label>
-            <input class="form-control" id="email" name="Email" type="text" placeholder="Phone">
+            <input class="form-control" id="email" name="Email" type="text" placeholder="">
             <small class="error">A valid email is required.</small>
+        </div>
+
+        <!-- YOUR SUBURB -->
+        <div class="form-group">
+            <label for="name">Suburb<span class="asterisk">*</span></label>
+            <input class="form-control" id="suburb" name="Suburb" type="text" placeholder="" required>
+            <small class="error">Your name is required.</small>
+        </div>
+
+        <!-- REFERRAL -->
+        <div class="form-group">
+            <label for="referral">How did you hear about us?</label>
+            <select class="form-control custom-select" name="Referral" id="referral">
+                <option disabled selected>Choose one</option>
+                <option value="Google">Google</option>
+                <option value="Instagram">Instagram</option>
+                <option value="Twitter">Twitter</option>
+                <option value="Facebook">Facebook</option>
+                <option value="Friend">Word of mouth</option>
+                <option value="Other">Other</option>
+            </select>
         </div>
 
         <!-- MESSAGE -->
         <div class="form-group">
-            <label for="message">Your Message (required)</label>
-            <textarea class="form-control" id="message" name="Message" rows="4" placeholder="Message" required></textarea>
+            <label for="message">Your Message<span class="asterisk">*</span></label>
+            <textarea class="form-control" id="message" name="Message" rows="4" placeholder="" required></textarea>
             <small class="error">A message is required.</small>
         </div>
 
         <!-- SUBMIT -->
-        <button type="submit" class="btn btn-primary mb-3 float-right text-uppercase">Send <i class="fa fa-angle-right"></i></button>
+        <button type="submit" class="btn btn-primary mb-3 float-right">Get Quote <i class="fa fa-angle-right"></i></button>
+
+        <!-- REQUIRED -->
+        <span class="asterisk">*</span><i>required</i>
 
     </fieldset>
 </form>
