--- a/src/_layouts/base__homepage.html
+++ b/src/_layouts/base__homepage.html
@@ -11,10 +11,11 @@ layout: base
 	<div class="container">
 		<div class="row">
 			<div class="col-md-7">
-				<h2>Our Story</h2>
-				<p class="lead">CJH Constructions PTY LTD is a family owned and operated business. We put the needs of our clients first.</p>
-				<p>We believe in thorough client consultation to ensure we understand your vision.</p><p>We work within any budget and take on projects both big and small.</p><p>It is important to us that our clients feel happy and comfortable at every stage of construction.</p>
-				<p>We provide free no obligation quotes at your request.</p>
+				<h2>Who We Are</h2>
+				<p>CJH Constructions PTY LTD is a family owned local business in <strong>Campbelltown</strong> who offer a full range of top tier <a href="#services">carpentry services</a> from decks and pergolas to carports, walls and home renovations at competitive rates.</p>
+				<br>
+				<h3>Our Mission</h3>
+				<p>Our main mission is to refresh tired homes, using modern-day practices with a wealth of local knowledge to bring your home into the 21st century. We add immense value to your greatest investment, and we do it right.</p>
 			</div>
 			<div class="spacer mb-4 hidden-md-up"></div>
 			<div class="col-md-4 offset-md-1">
@@ -50,10 +51,12 @@ layout: base
 	</div>
 </section>
 
-<!-- PROJECTS -->
+{% include sections/locations.html %}
+
+<!-- GALLERY -->
 <section id="projects" class="section">
 	<div class="container">
-		<h2 class="text-center mb-5">Recent Projects</h2>
+		<h2 class="text-center mb-5">Gallery</h2>
 		<ul class="block-grid-md-2 block-grid-lg-3">
 			{% for i in (1..6) %}
 				<li><img width="100%" src="/assets/img/content/gallery-{{i}}.jpg" alt="Gallery"></li>
@@ -67,7 +70,7 @@ layout: base
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-md-8 col-lg-6 col-xl-5">
-				<h2 class="text-center mb-5">Contact Us for a Quick Quote!</h2>
+				<h2 class="text-center mb-5">Need a job done?<br> Get a quick <i>free</i> quote today.</h2>
 				{% include snippets/form_basic.html %}
 			</div>
 		</div>
