--- a/src/_includes/snippets/form_basic.html
+++ b/src/_includes/snippets/form_basic.html
@@ -25,7 +25,7 @@
 
         <!-- EMAIL -->
         <div class="form-group">
-            <label for="email">Your Email<span class="asterisk">*</span></label>
+            <label for="email">Email<span class="asterisk">*</span></label>
             <input class="form-control" id="email" name="Email" type="email" placeholder="" required>
             <small class="error">A valid email is required.</small>
         </div>
@@ -60,7 +60,7 @@
 
         <!-- MESSAGE -->
         <div class="form-group">
-            <label for="message">Your Message<span class="asterisk">*</span></label>
+            <label for="message">Message<span class="asterisk">*</span></label>
             <textarea class="form-control" id="message" name="Message" rows="4" placeholder="" required></textarea>
             <small class="error">A message is required.</small>
         </div>
