--- a/src/_includes/sections/locations.html
+++ b/src/_includes/sections/locations.html
@@ -1,8 +1,8 @@
 {% assign settings = site.data.settings %}
 {% assign suburbs = settings.campbelltown_suburbs %}
 
-{% comment %}
 
+{% comment %}
 
 <!-- AREAS WE SERVICE -->
 <section id="areas-we-service" class="section section-areas-we-service section-split">
@@ -27,9 +27,10 @@
 
 			</div>
 			<div class="col-md-6">
-				{% include snippets/google_map.html %}
+				{% include snippets/google_map.html address="Campbelltown Region, NSW" %}
 			</div>
 		</div>
 	</div>
 </section>
+
 {% endcomment %}
