--- a/src/_layouts/base__homepage.html
+++ b/src/_layouts/base__homepage.html
@@ -12,7 +12,7 @@ layout: base
 		<div class="row">
 			<div class="col-md-7">
 				<h2>Who We Are</h2>
-				<p>CJH Constructions PTY LTD is a family owned local business in <strong>Campbelltown</strong> who offer a full range of top tier <a href="#services">carpentry services</a> from decks and pergolas to carports, walls and home renovations at competitive rates.</p>
+				<p>CJH Constructions PTY LTD is a family owned local business in <strong>Campbelltown</strong> who offer a full range of top tier construction and carpentry services from decks and pergolas to carports, walls and home renovations at competitive rates.</p>
 				<br>
 				<h3>Our Mission</h3>
 				<p>Our main mission is to refresh tired homes, using modern-day practices with a wealth of local knowledge to bring your home into the 21st century. We add immense value to your greatest investment, and we do it right.</p>
@@ -35,7 +35,7 @@ layout: base
 <!-- SERVICES -->
 <section id="services" class="section has-image-bg inverse" style="background-image: url(/assets/img/content/hero/hero-2.jpg)">
 	<div class="container">
-		<h2 class="mb-5 text-center">Our Services</h2>
+		<h2 class="mb-5 text-center">We Specialise In...</h2>
 		<ul class="block-grid-xs-2 block-grid-md-2 text-center">
 			<li><h3>Renovations</h3></li>
 	​		<li><h3>Flooring</h3></li>
@@ -54,7 +54,7 @@ layout: base
 {% include sections/locations.html %}
 
 <!-- GALLERY -->
-<section id="projects" class="section">
+<section id="gallery" class="section">
 	<div class="container">
 		<h2 class="text-center mb-5">Gallery</h2>
 		<ul class="block-grid-md-2 block-grid-lg-3">
