--- a/src/_layouts/base__homepage.html
+++ b/src/_layouts/base__homepage.html
@@ -21,7 +21,7 @@ layout: base
 			<div class="col-md-4 offset-md-1">
 				<h3><i class="fa fa-clock-o"></i> Trading Hours</h3>
 				<p class="lead">
-					<strong>MON - FRI:</strong> 7:30am - 5pm<br>
+					<strong>MON - FRI:</strong> 7am - 5pm<br>
 					<strong>SAT:</strong> 9am - 4pm<br>
 					<strong>SUN:</strong> 10am - 4pm<br>
 				</p>
@@ -33,31 +33,54 @@ layout: base
 </section>
 
 <!-- SERVICES -->
-<section id="services" class="section has-image-bg inverse" style="background-image: url(/assets/img/content/hero/hero-2.jpg)">
+<section id="services" class="section section-lightest">
 	<div class="container">
-		<h2 class="mb-5 text-center">We Specialise In...</h2>
-		<ul class="block-grid-xs-2 block-grid-md-2 text-center">
-			<li><h3>Renovations</h3></li>
-	​		<li><h3>Flooring</h3></li>
-			<li><h3>Decks</h3></li>
-			<li><h3>Pergolas</h3></li>
-			<li><h3>Roofing</h3></li>
-			<li><h3>Car Ports</h3></li>
-			<li><h3>Fitouts</h3></li>
-			<li><h3>Custom Work</h3></li>
-			<li><h3>New Homes</h3></li>
-			<li><h3>All Aspects of Carpentry</h3></li>
-		</ul>
+		<h2 class="mb-5 text-center">Our Specialty Services</h2>
+		<div class="row">
+			<div class="col-lg-4 px-4">
+
+				<!-- DECKS -->
+				<a class="btn-tile mb-4" href="#decks">
+				    <img width="100%" src="/assets/img/content/decks@2x.jpg" alt="Decks">
+				    <span class="btn-tile-bg" style="background-image: url(/assets/img/content/decks@2x.jpg)"></span>
+				</a>
+				<h3>Decks</h3>
+				<p>For both new and existing homes we offer quality decks in both pine, hardwood and hybrids to give you that 'in door/out door' feeling and extra living space. Deck restoration is also available for homes that simply need some rejuvenation.</p>
+
+			</div>
+			<div class="col-lg-4 px-4">
+
+				<!-- PERGOLAS -->
+				<a class="btn-tile mb-4" href="#pergolas">
+				    <img width="100%" src="/assets/img/content/pergolas@2x.jpg" alt="Decks">
+				    <span class="btn-tile-bg" style="background-image: url(/assets/img/content/pergolas@2x.jpg)"></span>
+				</a>
+				<h3>Pergolas</h3>
+				<p>We offer quality pergolas in a range of timbers and materials. Whether it's a custom built Pergola to work with your existing building or repairing an existing structure we can help you select the right package for you. </p>
+
+			</div>
+			<div class="col-lg-4 px-4">
+
+				<!-- INTERIOR CARPENTRY -->
+				<a class="btn-tile mb-4" href="#interior-carpentry">
+				    <img width="100%" src="/assets/img/content/interior-carpentry@2x.jpg" alt="Decks">
+				    <span class="btn-tile-bg" style="background-image: url(/assets/img/content/interior-carpentry@2x.jpg)"></span>
+				</a>
+				<h3>Interior Carpentry</h3>
+				<p>Create open plan living in your existing home by removing or relocating walls. Freshen up and modernize your interiors with an inexpensive upgrade to doors, skirting, architraves and fixings. We can help you select a package that is right for you. </p>
+
+			</div>
+		</div>
 	</div>
 </section>
 
 {% include sections/locations.html %}
 
 <!-- GALLERY -->
-<section id="gallery" class="section">
+<section id="gallery" class="section" hidden>
 	<div class="container">
 		<h2 class="text-center mb-5">Gallery</h2>
-		<ul class="block-grid-md-2 block-grid-lg-3">
+		<ul class="block-grid-md-2 block-grid-lg-4">
 			{% for i in (1..6) %}
 				<li><img width="100%" src="/assets/img/content/gallery-{{i}}.jpg" alt="Gallery"></li>
 			{% endfor %}
