--- a/src/_layouts/base__homepage.html
+++ b/src/_layouts/base__homepage.html
@@ -37,7 +37,7 @@ layout: base
 	<div class="container">
 		<h2 class="mb-5 text-center">Our Specialty Services</h2>
 		<div class="row">
-			<div class="col-lg-4 px-4">
+			<div class="col-lg-4 px-lg-4">
 
 				<!-- DECKS -->
 				<a class="btn-tile mb-4" href="#decks">
@@ -48,7 +48,7 @@ layout: base
 				<p>For both new and existing homes we offer quality decks in both pine, hardwood and hybrids to give you that 'in door/out door' feeling and extra living space. Deck restoration is also available for homes that simply need some rejuvenation.</p>
 
 			</div>
-			<div class="col-lg-4 px-4">
+			<div class="col-lg-4 px-lg-4">
 
 				<!-- PERGOLAS -->
 				<a class="btn-tile mb-4" href="#pergolas">
@@ -59,7 +59,7 @@ layout: base
 				<p>We offer quality pergolas in a range of timbers and materials. Whether it's a custom built Pergola to work with your existing building or repairing an existing structure we can help you select the right package for you. </p>
 
 			</div>
-			<div class="col-lg-4 px-4">
+			<div class="col-lg-4 px-lg-4">
 
 				<!-- INTERIOR CARPENTRY -->
 				<a class="btn-tile mb-4" href="#interior-carpentry">
