--- a/src/_layouts/base__homepage.html
+++ b/src/_layouts/base__homepage.html
@@ -56,7 +56,7 @@ layout: base
 				    <span class="btn-tile-bg" style="background-image: url(/assets/img/content/pergolas@2x.jpg)"></span>
 				</a>
 				<h3>Pergolas</h3>
-				<p>We offer quality pergolas in a range of timbers and materials. Whether it's a custom built Pergola to work with your existing building or repairing an existing structure we can help you select the right package for you. </p>
+				<p>We offer quality pergolas in a range of timbers and materials. Whether it's a custom built pergola to work with your existing building or repairing an existing structure we can help you select the right package for you. </p>
 
 			</div>
 			<div class="col-lg-4 px-lg-4">
